feat: remove dacName from message

--- a/src/main/resources/freemarker/new-daa-request.html
+++ b/src/main/resources/freemarker/new-daa-request.html
@@ -25,11 +25,11 @@
     <tr>
       <td style="padding: 15px 15px 0px; font-family: 'Montserrat', sans-serif; font-size: 16px; color: #1F3B50; text-align: justify; line-height: 25px;">
         <p>
-          A user, ${userName}, submitted a request for Data Access Agreement ${daaName} for the ${dacName} DAC.
+          A user, ${userName}, submitted a request for Data Access Agreement ${daaName}.
         </p>
         <p style="text-align: center">
           <a id="serverUrl" href="${serverUrl}" style="text-decoration: none; font-family: 'Montserrat', sans-serif; color: #00609F; font-size: 20px; font-weight: bold;">
-            Please login to review user's Data Access Agreements.
+            Please login to review {userName}'s Data Access Agreements.
           </a>
         </p>
       </td>
